--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                     <div class="box-text">
                         <h5>设计</h5>
-                        <p>专业的设计团队提供最好的设计方案。</p>
+                        <p>横着打个勾就算是最棒的设计。</p>
                     </div>
                 </div>
             
@@ -147,7 +147,7 @@
 
                     <div class="box-text">
                         <h5>热销</h5>
-                        <p>专业的设计团队提供最好的设计方案。</p>
+                        <p>只有你想得到，没有我做得出。</p>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
 
                     <div class="box-text">
                         <h5>产品</h5>
-                        <p>专业的设计团队提供最好的设计方案。</p>
+                        <p>最棒的产品往往采用最简单的方式制作。</p>
                     </div>
                 </div>
             </div>
